# filebrowser-notifs

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  QUICKSTART.md  README.md  config.example.json  docker-compose.yml  filebrowser-monitor.service  monitor.py  pyproject.toml  setup.bat  setup.sh  setup_scheduler.ps1
.github/workflows/: lint.yml  test.yml
