[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "filebrowser-notifs"
version = "1.0.0"
description = "Monitor FileBrowser for new/modified files and send Discord notifications"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["filebrowser", "discord", "notifications", "monitor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Home Automation",
    "Topic :: Internet",
]
dependencies = [
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/filebrowser-notifs"
Documentation = "https://github.com/yourusername/filebrowser-notifs#readme"
Repository = "https://github.com/yourusername/filebrowser-notifs.git"
Issues = "https://github.com/yourusername/filebrowser-notifs/issues"
Changelog = "https://github.com/yourusername/filebrowser-notifs/blob/main/CHANGELOG.md"

[project.scripts]
filebrowser-monitor = "monitor:main"

[tool.setuptools]
packages = []

[tool.black]
line-length = 127
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 127

[tool.pylint.messages_control]
max-line-length = 127
